--- a/templates/insurance.html
+++ b/templates/insurance.html
@@ -5,7 +5,6 @@
 <!-- ========== Start HERO ========== -->
 
 <section class="insurance-hero p-5">
-
     <div class="container text-start text-light ">
         <div class="row">
             <div class="col-lg-8 p-5">
@@ -24,61 +23,88 @@
 <div class="container p-5">
     <div class="row ">
         <!-- ========== Start Guest insurance section ========== -->
-        <div class="col-lg-6">
-            <div class="bg-info rounded">
-                <h3 class="text-center text-white p-3">Guest</h3>
-                <div class="bg-white border border-primary  rounded  w-75 m-auto p-1 ">
-                    <h5 class="text-dark text-center">Civil liability insurance included</h5>
-                    <p class="text-muted">- Bodily injury: unlimited.</p>
-                    <p class="text-muted">- Property damage: limited to XXX MAD (including fire, explosion 2
-                        million)
-                    </p>
-                </div>
-                <div class="bg-white border border-primary  rounded ">
-                    <h5 class=" text-dark text-center">24-hour breakdown and accident assistance included</h5>
-                    <p class="text-muted">In the event of a breakdown or accident, rented vehicles are automatically
-                        entitled to 0 kilometer 24/7 assistance.</p>
-                </div>
-                <div class="bg-white border border-primary  rounded ">
-                    <h5 class=" text-dark text-center">Additional insurance and assistance options</h5>
-                    <p class="text-muted">These additional guarantees are offered as an option, when booking the
-                        vehicle
-                        or at any time before the start of the rental period</p>
+        <div class="col-lg-6 mt-5">
+            <div class="bg-info">
+                <h3 class="text-center text-black p-2">Guest</h3>
+                <div class="container">
+                    <div class="row pb-4">
+                        <div class="col-12">
+                            <div class="bg-white border border-primary rounded  m-3 p-1 ">
+                                <h5 class="text-dark text-start w-75">Civil liability insurance included</h5>
+                                <p class="text-muted w-75">- Bodily injury: unlimited.</p>
+                                <p class="text-muted w-75">- Property damage: limited to XXX MAD (including fire,
+                                    explosion 2
+                                    million)
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="bg-white border border-primary rounded  m-3 p-1 ">
+                                <h5 class="text-dark text-start w-75">24-hour breakdown and accident assistance included
+                                </h5>
+                                <p class="text-muted w-75">In the event of a breakdown or accident, rented vehicles are
+                                    automatically entitled to 0 kilometer 24/7 assistance.</p>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="bg-white border border-primary rounded  m-3 p-1 ">
+                                <h5 class="text-dark text-start w-75">Additional insurance and assistance options</h5>
+                                <p class="text-muted w-75">These additional guarantees are offered as an option, when
+                                    booking
+                                    the vehicle or at any time before the start of the rental period</p>
+                            </div>
+                        </div>
+                        <a href="" class="btn btn-dark m-auto">Find out more</a>
+                    </div>
                 </div>
             </div>
         </div>
         <!-- ========== End Guest insurance section ========== -->
         <!-- ========== Start Host insurance section ========== -->
 
-        <div class="col-lg-6 ">
-            <div class="bg-info rounded">
+        <div class="col-lg-6 mt-5">
+            <div class="bg-info">
+                <h3 class="text-center text-black p-2">Host</h3>
+                <div class="container">
+                    <div class="row pb-4">
+                        <div class="col-12">
+                            <div class="bg-white border border-primary rounded  m-3 p-1 ">
+                                <h5 class="text-dark text-start w-75">XXX insurance included</h5>
+                                <p class="text-muted w-75">Our insurance automatically replaces your vehicle's insurance
+                                    for
+                                    the entire rental period.</p>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="bg-white border border-primary rounded  m-3 p-1 ">
+                                <h5 class="text-dark text-start w-75">Criminal defense and recourse following an
+                                    accident
+                                </h5>
+                                <p class="text-muted w-75">Coverage of the costs for initiating legal proceedings in the
+                                    event of a dispute with a third party.</p>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="bg-white border border-primary rounded m-3 p-1 ">
+                                <h5 class="text-dark text-start w-75">24-hour breakdown and accident assistance included
+                                </h5>
+                                <p class="text-muted w-75">In the event of a breakdown or accident, rented vehicles are
+                                    automatically entitled to 0 kilometer 24/7 assistance.</p>
+                            </div>
+                        </div>
+                        <a href="" class="btn btn-dark m-auto">Find out more</a>
 
-                <h3 class="text-center ">Host</h3>
-                <div class="bg-white border border-primary  rounded ">
-                    <h5 class=" text-dark text-center">XXX insurance included</h5>
-                    <p class="text-muted">Our insurance automatically replaces your vehicle's insurance for the
-                        entire
-                        rental period.</p>
+                    </div>
                 </div>
-                <div class="bg-white border border-primary  rounded ">
-                    <h5 class=" text-dark text-center">Criminal defense and recourse following an accident</h5>
-                    <p class="text-muted">Coverage of the costs for initiating legal proceedings in the event of a
-                        dispute with a third party.</p>
-                </div>
-                <div class="bg-white border border-primary  rounded ">
-                    <h5 class=" text-dark text-center">24-hour breakdown and accident assistance included</h5>
-                    <p class="text-muted">In the event of a breakdown or accident, rented vehicles are automatically
-                        entitled to 0 kilometer 24/7 assistance.</p>
-                </div>
-
             </div>
-            <!-- ========== End Host insurance section ========== -->
         </div>
     </div>
 
 </div>
-
-
 <!-- ========== End Guest and host insurance section ========== -->
+<!-- ========== Start FAQ ========== -->
+
+<!-- ========== End FAQ ========== -->
+
 
 {% endblock %}
